--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "framer-motion": "^12.25.0",
+    "react-intersection-observer": "^10.0.0",
     "tailwindcss": "^4",
+    "three": "^0.182.0",
     "typescript": "^5"
   }
 }
